--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux": "^3.5.2",
     "redux-form": "^5.2.3",
     "redux-thunk": "^2.1.0",
+    "toastr": "^2.1.2",
     "webpack": "^1.13.0"
   }
 }
